<resources>
    <!--    base home screen strings    -->
    <string name="app_name">Android Training</string>
    <string name="activity_name">activity name</string>

    <!--    stock exchange screen strings   -->
    <string name="toolbarTitle">GEMINI</string>
    <string name="tab_item_limit">Limit</string>
    <string name="tab_item_market">Market</string>
    <string name="tab_item_pool">Pool</string>
    <string name="tab_item_info">Info</string>
    <string name="heading_exchange">Exchange</string>
    <string name="heading_date">OCTOBER 18, SATURDAY 3:19:23 PM</string>
    <string name="you_exchange_label">You exchange</string>
    <string name="avax">AVAX</string>
    <string name="menu_icon">menu icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="stock_numbers">47,38662</string>
    <string name="stock1">Stock!</string>
    <string name="market_indicators_label">MA \t / \t EMA \t / \t BOLL</string>
    <string name="exchange_stock_current_price">$0.187200</string>
    <string name="price">PRICE</string>
    <string name="exchange_stock_price">~$ 6.022,84</string>
    <string name="you_receive">You Receive</string>
    <string name="minus_icon_content_description">minus_icon</string>
    <string name="plus_icon_content_description">plus icon</string>
    <string name="receive_stock_current_price">$0.187200</string>
    <string name="receive_stock_price">~$ 6.022,84</string>
    <string name="transaction_cost">Transaction cost</string>
    <string name="transaction_cost_value">$32.80</string>
    <string name="exchanged_stock_detail">ABC!</string>
    <string name="picked_stock_snack_bar">"StockPicked"</string>
    <string name="exchange_for">Exchange for</string>
    <string name="total_stock">1.497,68</string>
    <string name="stock_name_total">LINK</string>
    <string name="market_label">Market</string>
    <string name="wallet_label">Wallet</string>
    <string name="exchange_label">Exchange</string>
    <string name="fab_for_exchange">fab for exchange</string>
    <string name="BOA">BOA</string>
    <string name="TCS">TCS</string>
    <string name="HDFC">HDFC</string>
    <string name="ITC">ITC</string>
    <string name="AXIS">AXIS</string>
    <string name="SBI">SBI</string>
    <string name="dismiss">Dismiss</string>
    <string name="minus_sign_for_receiving_amount">minus sign for receiving amount</string>
    <string name="plus_sign_for_receiving_amount">plus sign for receiving amount</string>

    <!--    NFT bazaar screen strings-->
    <string name="fab_button_for_exchange">fab button for exchange</string>
    <string name="nft_bazaar">NFT Bazaar</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password_minimum_8_characters">password (minimum 8 characters)</string>
    <string name="by_signing_up_you_accept_our">By signing up, you accept our</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SIGNUP</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number">mobile number</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="resend">resend</string>
    <string name="we_have_sent_verification_code_to">We have sent verification code to.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="dummy_mobile_number">+91 6898898745</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="collections">Collections</string>
    <string name="nft_bored_bunny">NFT Bored Bunny</string>
    <string name="_0_18_eth">0.18 ETH</string>
    <string name="buy_now">Buy Now</string>
    <string name="dour_darcel">\@Dour Darcel</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="nft_collection_name">NFT Collection Name</string>
    <string name="nft_name">NFT Name</string>
    <string name="_1001">#1001</string>
    <string name="price_label">Price:</string>
    <string name="nft_id_dummy">#1001</string>
    <string name="nfts">NFTs</string>
    <string name="log_in">Log In</string>
    <string name="create_your_account">Create your account</string>
    <string name="signup_success">Sign up success!</string>

    <!--    Arithmetic recycler view strings    -->
    <string name="add_more">Add More</string>
    <string name="plus_icon">+</string>
    <string name="first_number">First number</string>
    <string name="multiply_icon">X</string>
    <string name="second_number">Second number</string>
    <string name="total">Total:</string>
    <string name="add_more_images">Add more Images</string>
    <string name="delete_this_spinner">Delete this spinner</string>
    <string name="delete_this_image">Delete this image</string>
    <string name="add_more_cards">Add more cards</string>
    <string name="delete_this_card">Delete this card</string>
    <string name="add_spinner">Add Spinner</string>
    <string name="add_image">Add Image</string>

    <!--    activities and fragment example     -->
    <string name="main_activity">Main Activity</string>
    <string name="go_to_next_activity">Go To Next Activity</string>
    <string name="fragment_transactions">Fragment Transactions</string>
    <string name="intents">Intents</string>
    <string name="send_text">Send Text</string>
    <string name="ui_screens">UI Screens</string>
    <string name="components">Components</string>
    <string name="no_data_available">No Data Available</string>
    <string name="action_bar_title_ui_screens">UI Screens</string>
    <string name="action_bar_title_components">Components</string>
    <string name="pick_image">Pick Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="image_picker">Image Picker</string>
    <string name="enter_your_message">enter your message</string>
    <string name="pass_text">Pass Text:</string>
    <string name="send_email">Send email</string>
    <string name="email_subject">Email Subject</string>
    <string name="email_message">Email message</string>
    <string name="web_browser">Web Browser</string>
    <string name="pending_intents">Pending Intents</string>
    <string name="alarm_manger">Alarm Manger</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="activity_started_by_alarm_manager">Activity started by alarm manager</string>

    <!--    practical chapter 3 strings     -->
    <string name="gallery">Gallery</string>
    <string name="add_message">Add Message</string>
    <string name="view_message">View Message</string>
    <string name="content_desc_pick_image">Pick Image</string>
    <string name="chapter_3_practical">Chapter 3: practical</string>
    <string name="your_message">Your Message</string>
    <string name="send_message">Send Message</string>
    <string name="content_desc_delete_all_messages">Delete all messages</string>
    <string name="preview">Preview</string>

    <!--    Web view Strings    -->
    <string name="enter_url">Enter url here</string>
    <string name="default_landing_page">https://www.BBC.com</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="www_dot">www.</string>
    <string name="message_to_send">Swinging on a star.</string>

    <!--    Web service     -->
    <string name="login">Login</string>
    <string name="id">Id:</string>
    <string name="email">Email:</string>
    <string name="created_on">Created on:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="create_user">Create User</string>
    <string name="create_user_on_server">Create User On Server</string>
    <string name="name_must_not_be_empty">Name must not be empty!</string>
    <string name="please_enter_valid_email">Please enter valid email!</string>
    <string name="password_length_error">password min length 6 and max length 8</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="see_image">See image</string>
</resources>