<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.webservices.adequateshopuserapi.views.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppNameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        android:textSize="36sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="@id/tvAppNameLogo"
        app:layout_constraintEnd_toEndOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEmail"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:endIconMode="custom"
    app:endIconCheckable="false"
    app:layout_constraintEnd_toEndOf="@id/btnSignup"
    app:layout_constraintStart_toStartOf="@id/tvAppNameLogo"
    app:layout_constraintTop_toBottomOf="@id/tvAppNameLogo">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:maxLines="1" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilPassword"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:endIconCheckable="true"
    app:endIconMode="password_toggle"
    app:layout_constraintEnd_toEndOf="@id/tilEmail"
    app:layout_constraintStart_toStartOf="@id/tilEmail"
    app:layout_constraintTop_toBottomOf="@id/tilEmail">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.checkbox.MaterialCheckBox
    android:id="@+id/remember_me_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/remember_me"
    app:layout_constraintStart_toStartOf="@id/tilPassword"
    app:layout_constraintTop_toTopOf="@id/forgot_password"
    app:layout_constraintBottom_toBottomOf="@id/forgot_password"/>

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/forgot_password"
    android:textColor="@color/black"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="@id/tilPassword"
    app:layout_constraintTop_toBottomOf="@id/tilPassword" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnLogin"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:backgroundTint="#705FAA"
    android:text="@string/log_in"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="@id/tilPassword"
    app:layout_constraintStart_toStartOf="@id/tilPassword"
    app:layout_constraintTop_toBottomOf="@id/forgot_password" />

<View
    android:id="@+id/viewDividerLineOne"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginTop="28dp"
    android:background="@color/black"
    app:layout_constraintEnd_toStartOf="@id/tvOrDivider"
    app:layout_constraintStart_toStartOf="@id/btnLogin"
    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

<TextView
    android:id="@+id/tvOrDivider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:text="@string/or"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@id/viewDividerLineOne"
    app:layout_constraintEnd_toStartOf="@id/viewDividerLineTwo"
    app:layout_constraintStart_toEndOf="@id/viewDividerLineOne"
    app:layout_constraintTop_toTopOf="@id/viewDividerLineOne" />

<View
    android:id="@+id/viewDividerLineTwo"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintBottom_toBottomOf="@id/tvOrDivider"
    app:layout_constraintEnd_toEndOf="@id/btnSignup"
    app:layout_constraintStart_toEndOf="@id/tvOrDivider"
    app:layout_constraintTop_toTopOf="@id/tvOrDivider" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnContinueWithGoogle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/continue_with_google"
    app:icon="@drawable/google_icon"
    app:layout_constraintEnd_toEndOf="@id/btnLogin"
    app:layout_constraintStart_toStartOf="@id/btnLogin"
    app:layout_constraintTop_toBottomOf="@id/viewDividerLineOne" />

</androidx.constraintlayout.widget.ConstraintLayout>