<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.example.android.webservices.viewmodels.UserAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.webservices.adequateshopuserapi.views.LoginActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAppNameLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sixteen_dp"
            android:layout_marginTop="@dimen/margin_thirty_six_dp"
            android:text="@string/login"
            android:textSize="@dimen/text_size_thirty_six"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_sixteen_dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="@id/tvAppNameLogo"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty_dp"
            app:endIconCheckable="false"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/btnSignup"
            app:layout_constraintStart_toStartOf="@id/tvAppNameLogo"
            app:layout_constraintTop_toBottomOf="@id/tvAppNameLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty_dp"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty_four_dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_twelve"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>